--- a/Todo/MainPage.xaml
+++ b/Todo/MainPage.xaml
@@ -16,23 +16,18 @@
                BackgroundColor="Transparent"/>
 
         <Entry Placeholder="Enter task"
-               Text="{Binding Text}"
+               Text="{Binding InputText}"
                Grid.Row="1"/>
 
         <Button Text="Add"
+                Command="{Binding AddCommand}"
                 Grid.Row="1"
                 Grid.Column="1"/>
 
-        <CollectionView Grid.Row="2" Grid.ColumnSpan="2">
-            <CollectionView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>Apples</x:String>
-                    <x:String>Bananas</x:String>
-                    <x:String>Oranes</x:String>
-                </x:Array>
-            </CollectionView.ItemsSource>
+        <CollectionView Grid.Row="2" Grid.ColumnSpan="2"
+                        ItemsSource="{Binding Items}">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="{x:Type x:String}">
                     <SwipeView>
                         <SwipeView.RightItems>
                             <SwipeItems>
