--- a/Todo/MainPage.xaml
+++ b/Todo/MainPage.xaml
@@ -31,10 +31,17 @@
                     <SwipeView>
                         <SwipeView.RightItems>
                             <SwipeItems>
-                                <SwipeItem Text="Delete"
+                                <!--<SwipeItem Text="Delete"
                                            BackgroundColor="Red"
                                            Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}}, Path=DeleteCommand}"
-                                           CommandParameter="{Binding .}"/>
+                                           CommandParameter="{Binding .}"/>-->
+                                <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}}, Path=DeleteCommand}"
+                                               CommandParameter="{Binding .}">
+                                    <Button Text="Delete"
+                                            BackgroundColor="Red"
+                                            HorizontalOptions="Center" 
+                                            VerticalOptions="Center"/>
+                                </SwipeItemView>
                             </SwipeItems>
                         </SwipeView.RightItems>
                         <Grid Padding="0,5">
