--- a/Todo/DetailPage.xaml
+++ b/Todo/DetailPage.xaml
@@ -2,11 +2,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Todo.DetailPage"
+             xmlns:viewmodel="clr-namespace:Todo.ViewModels"
+             x:DataType="viewmodel:DetailViewModel"
              Title="DetailPage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="{Binding Text}"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+        <Button Text="Go Back"
+                Command="{Binding GoBackCommand}"/>
     </VerticalStackLayout>
 </ContentPage>
